testsuite/tests/ghci/scripts/ghci057.hs
module Test where
data T a where
  C :: T Int

